# Kinectfusion-from-Scratch

./: .gitignore  CMakeLists.txt  README.md
libs/: Eigen.h
src/: BilateralFilter.h  VirtualSensor.h  bilateral_filter.h  camera_specs.h  frame_data.h  main.cpp  model.h  output.h  pose_estimation.h  rgbd_frame_stream.h  sub_sampling.h  utils.h  vertex.h
